--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,4 +17,4 @@ features = ["http1", "http2", "server", "runtime"]
 
 [dependencies.tokio]
 version = "=1.2.0"
-features = ["macros", "rt-multi-thread"]
+features = ["macros", "rt-multi-thread", "signal"]
